<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />

    <CheckBox
        android:id="@+id/Chk_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Chk_1" />

    <TextView
        android:id="@+id/txt_radio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_radio" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/rdo_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/rdo_1" />

        <RadioButton
            android:id="@+id/rdo_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rdo_2" />

        <RadioButton
            android:id="@+id/rdo_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rdo_3" />

        <RadioButton
            android:id="@+id/rdo_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rdo_4" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content" >

        <ToggleButton
            android:id="@+id/tgl_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn" />

        <TextView
            android:id="@+id/txt_tgl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_text" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btn_exit" />

</LinearLayout>